# ash-testing

./: Cargo.toml
shader/triangle/: triangle.frag.spv  triangle.vert.spv
shaders/uniform-no-vbuf/: main.frag  main.frag.spv  main.vert
shaders/vt-3/: triangle.frag.spv  triangle.vert  triangle.vert.spv
shaders/vt-5-vbuf/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: lib.rs  single_pipe_renderer.rs  window.rs
