[package]
name = "examples"
version = "0.1.0"
authors = ["maik klein <maikklein@googlemail.com>"]
edition = "2018"

[dependencies]
winit = "0.19.5"
image = "0.10.4"
ash = "0.29.0"
memoffset = "0.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.1"
cocoa = "0.20.0"
objc = "0.2.7"

[profile.release]
debug = true
