[package]
name = "ash-testing"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
winit = "0.19.5"
image = "0.10.4"
ash = "0.29.0"
memoffset = "0.5.3"
lyon = "0.15.6"
lyon_tessellation = "0.15.6"
crossbeam-channel = "0.4.2"
rand = "0.7.3"
rand_core = "0.5.1"
rand_chacha = "0.2.2"
log = "0.4"
fern = "0.6"
chrono = "0.4.11"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.1"
cocoa = "0.20.0"
objc = "0.2.7"

[profile.release]
debug = true
